--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
     "@types/winston": "^2.4.4",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "typescript": "^3.9.3",
     "winston": "^3.2.1"
