--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "tsc -w",
     "serve": "nodemon",
     "start": "concurrently \"npm:watch\" \"npm:serve\"",
-    "build": "tsc && cp index.html dist/",
+    "build": "tsc && cp index.html cv.pdf dist/",
     "serve:prod": "node dist/server.js",
     "start:prod": "npm run build && npm run serve:prod",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
